update step7 title

--- a/en/meta.yml
+++ b/en/meta.yml
@@ -12,5 +12,5 @@ steps:
   - title: Make LEGO dials
   - title: Make an LED scale
   - title: Set the time with a LEGO clock
-  - title: Displaying online data
+  - title: Displaying online data with your dashboard
   - title: What next?
