--- a/en/meta.yml
+++ b/en/meta.yml
@@ -8,6 +8,7 @@ last_tested: "2021-03-26"
 steps:
   - title: Introduction
   - title: Plan your dashboard
+  - title: Access your chosen API
   - title: Make a LEGO sliding indicator
   - title: Make LEGO dials
   - title: Make an LED scale
