--- a/en/meta.yml
+++ b/en/meta.yml
@@ -13,5 +13,5 @@ steps:
   - title: Make a LEGO gauge
   - title: Make an LED scale
   - title: Set the time with a LEGO clock
-  - title: Displaying online data with your dashboard
+  - title: Displaying pollution data with your dashboard
   - title: What next?
