--- a/en/meta.yml
+++ b/en/meta.yml
@@ -12,6 +12,6 @@ steps:
   - title: Make a LEGO sliding indicator
   - title: Make a LEGO gauge
   - title: Make an LED scale
-  - title: Set the time with a LEGO clock
+  - title: Choose the time with a LEGO clock
   - title: Displaying pollution data with your dashboard
   - title: What next?
