--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,4 +1,4 @@
-title: LEGO Data dashboard
+title: LEGO® data dashboard
 hero_image: images/banner.png
 description: invent-project-template description
 version: 4
