--- a/en/meta.yml
+++ b/en/meta.yml
@@ -1,6 +1,6 @@
 title: LEGO® data dashboard
 hero_image: images/banner.png
-description: invent-project-template description
+description: Display pollution data on physical dials and sliders with LEGO® and the Build HAT
 version: 4
 listed: false
 copyedit: false
