--- a/en/meta.yml
+++ b/en/meta.yml
@@ -2,8 +2,8 @@ title: LEGO® data dashboard
 hero_image: images/banner.png
 description: Display pollution data on physical dials and sliders with LEGO® and the Build HAT
 version: 4
-listed: false
-copyedit: false
+listed: true
+copyedit: true
 last_tested: "2021-03-26"
 steps:
   - title: Introduction
