--- a/de-DE/meta.yml
+++ b/de-DE/meta.yml
@@ -20,6 +20,6 @@ steps:
   - 
     title: Greife auf die OpenAQ-API zu
   - 
-    title: Zeige Verschmutzungsdaten auf deiner Instrumententafel an
+    title: Zeige Verschmutzungsdaten mit deiner Instrumententafel an
   - 
     title: Wie geht es weiter?
