--- a/es-ES/meta.yml
+++ b/es-ES/meta.yml
@@ -14,4 +14,4 @@ steps:
   - title: Haz una escala LED
   - title: Accede a la API de OpenAQ
   - title: Muestra los datos de contaminación con su tablero
-  - title: '¿Qué hacer a continuación?'
+  - title: '¿Qué sigue?'
