--- a/es-ES/meta.yml
+++ b/es-ES/meta.yml
@@ -8,10 +8,10 @@ copyedit: true
 last_tested: "2021-03-26"
 steps:
   - title: Introducción
-  - title: Planifica su tablero
+  - title: Planifica tu tablero
   - title: Haz un indicador deslizante LEGO®
   - title: Haz un medidor LEGO®
   - title: Haz una escala LED
   - title: Accede a la API de OpenAQ
-  - title: Muestra los datos de contaminación con su tablero
+  - title: Muestra los datos de contaminación con tu tablero
   - title: '¿Qué sigue?'
