--- a/ja-JP/meta.yml
+++ b/ja-JP/meta.yml
@@ -5,13 +5,17 @@ description: LEGO® と BuildHATを使用して、物理的なダイヤルとス
 version: 4
 listed: true
 copyedit: true
-last_tested: "2021-03-26"
+last_tested: '2021-03-26'
 steps:
-  - title: はじめに
-  - title: ダッシュボードを計画する
-  - title: LEGO® でスライドインジケーターを作る
-  - title: LEGO® でゲージを作る
-  - title: LED でスケールを作る
-  - title: OpenAQ API にアクセスする
-  - title: ダッシュボードで汚染データを表示する
-  - title: 次は何をしますか？
+- title: はじめに
+- title: ダッシュボードを計画する
+- title: LEGO® でスライドインジケーターを作る
+  completion:
+  - engaged
+- title: LEGO® でゲージを作る
+- title: LED でスケールを作る
+- title: OpenAQ API にアクセスする
+- title: ダッシュボードで汚染データを表示する
+  completion:
+  - internal
+- title: 次は何をしますか？
